--- a/Check out.html
+++ b/Check out.html
@@ -14,12 +14,12 @@
 <nav>
     <div>
 		<div style="text-align: center; position: absolute">
-			<a href="Index page.html"><img src="./img/Logo 70x70.png" alt="simple black pentagram in circle red baclground"></a>
+			<a href="index.html"><img src="./img/Logo 70x70.png" alt="simple black pentagram in circle red baclground"></a>
 		</div>
 		<div style="position:relative; left: 10%;">	
         <ul>
 			<li> </li>
-			<li> <a href="Index page.html">Home</a></li>
+			<li> <a href="index.html">Home</a></li>
 			<li> <a href="About.html">About</a></li>
         	<li> <a href="Products.html"> Products</a></li>
         	<li> <a href="Check out.html">Check out</a></li>
