--- a/Sitemap.html
+++ b/Sitemap.html
@@ -10,7 +10,7 @@
     <h1>EVERLASTING CHAOS</h1>
 
     <ul>
-        <li> <a href="Index page.html">Home</a></li>
+        <li> <a href="index.html">Home</a></li>
         <li> <a href="About.html">About</a></li>
         <li> <a href="Products.html"> Products</a></li>
         <li> <a href="Check out.html">Check out</a></li>
@@ -27,7 +27,10 @@
 <img src="./img/Rider Waite Tarot Deck .png" alt="Rider waite tarot deck mid reading feminine hand holding the sun card">
 <p>Image by <a href="https://unsplash.com/@m_malkovich">Petr Sidorov</a> on <a href="https://unsplash.com/">unsplash</a></p>
 
-
+ICTWEB305 Assessment images 
+<img src="./img/Network image 1 - 300X300.png">
+<img src="./img/Network image 2 - 300x300.png">
+<img src="./img/Network image 3 - 300x300.png">
 
 
 </body>
