--- a/Sitemap.html
+++ b/Sitemap.html
@@ -27,10 +27,13 @@
 <img src="./img/Rider Waite Tarot Deck .png" alt="Rider waite tarot deck mid reading feminine hand holding the sun card">
 <p>Image by <a href="https://unsplash.com/@m_malkovich">Petr Sidorov</a> on <a href="https://unsplash.com/">unsplash</a></p>
 
-ICTWEB305 Assessment images 
+<p>ICTWEB305 Assessment images </p>
 <img src="./img/Network image 1 - 300X300.png">
+<p>Image by <a href="https://unsplash.com/@kirill2020"> Kirill Sh</a> on <a href="https://unsplash.com/">unsplash</a> </p>
 <img src="./img/Network image 2 - 300x300.png">
+<p>Image by <a href="https://unsplash.com/@thisisengineering">ThisisEngineering RAEng</a> on <a href="https://unsplash.com/">unsplash</a> </p>
 <img src="./img/Network image 3 - 300x300.png">
+<p> Image by <a href="https://unsplash.com/@imgix">imgix</a> on <a href="https://unsplash.com/">unsplash</a></p>
 
 
 </body>
