--- a/About.html
+++ b/About.html
@@ -27,6 +27,20 @@
 		</div>
 	</div> 
 </nav>
+<main>
+	Welcome to Everlasting Chaos!!
+
+	We are a small Melbourne based team here to support everyone on their spiritual Journey. Whether you're starting out or looking to advance your practice. We here to guide you through the chaos and support your practice needs. 
+	
+	Check at our store for tools of the trade or read our blog posts for guides on all things spiritual.
+	
+	Have more questions? No problem our team is here to help reach out via the contact page or book a consult with our spiritual guides.
+	
+	Happy practicing 
+	
+	The everlasting chaos team xx
+
+</main>
 
 
 
