--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 <main>
 <section>
 <h2> Welcome </h2>
-<p> this is the home page info paragraph</p>
+<p> Welcome to everlasting chaos an intentional business for the spiritual. 
+	Please explore the site to find tools for your trade or reach out to us directly for advice. 
+	We cater to beginners, advances practitioners and all those in between.
+	</p>
 </section>
 
 
