--- a/Blog.html
+++ b/Blog.html
@@ -23,14 +23,33 @@
         	<li> <a href="Products.html"> Products</a></li>
         	<li> <a href="Check out.html">Check out</a></li>
         	<li> <a href="Contact.html">Contact</a></li>
-			<li> <a href="Blog.html">Blog</a></li>
+            <li> <a href="Blog.html">Blog</a></li>
 		</ul>
 		</div>
 	</div> 
 </nav>
-<main>
 
-<p>Thank you for reaching out we aim to get back to you within 5 buisness days </p>
+<main>
+<section>
+<h2>Learn the basics with us...</h2>
+<p>See the below collections of articles for your practical guide to practicing</p>
+
+<div><style> table, th, td {
+        border: 1px solid black;}</style> 
+<table>
+<tr>
+<td> Moon phases</td>
+<td> Your guide on all things lunar</td>
+</tr>
+<tr>
+<td>Cleansing: A Beginners guide</td>
+<td> The 101 on cleansing </td>
+</tr>
+
+</table>
+</div>
+</section>
+
 
 
 </main>
@@ -40,4 +59,7 @@
         <a href="Sitemap.html">Sitemap</a>
     </p>
 </footer>
+
+
+
 </body>
