--- a/Contact.html
+++ b/Contact.html
@@ -23,6 +23,7 @@
         	<li> <a href="Products.html"> Products</a></li>
         	<li> <a href="Check out.html">Check out</a></li>
         	<li> <a href="Contact.html">Contact</a></li>
+            <li> <a href="Blog.html">Blog</a></li>
 		</ul>
 		</div>
 	</div> 
@@ -60,8 +61,9 @@
 </table>
 <Table style="border:1px solid black;margin-left:auto;margin-right:auto;">
    <tr>
-    <td><button type="submit" formaction="Contact submit page.html"><b>Submit</b></button></td>
     <td><input type="Reset" value="Reset"></td>
+    <td><button type="submit" formaction="Contact submit page.html"><b>Submit</b></button></td>
+    
     </tr> 
 </Table>
 </form>
