--- a/Order placed.html
+++ b/Order placed.html
@@ -23,14 +23,22 @@
         	<li> <a href="Products.html"> Products</a></li>
         	<li> <a href="Check out.html">Check out</a></li>
         	<li> <a href="Contact.html">Contact</a></li>
+			<li> <a href="Blog.html">Blog</a></li>
 		</ul>
 		</div>
 	</div> 
 </nav>
 <main>
 
-<p>Your order has been placed. Thank you for letting us support your practice</p>
+<p>Your order has been placed. Thank you for letting us support your practice <br>
+you should receive a confrimation email soom</p>
 
 
 </main>
+<footer>
+    <p>
+        &copy; KG Industy
+        <a href="Sitemap.html">Sitemap</a>
+    </p>
+</footer>
 </body>
