--- a/Products.html
+++ b/Products.html
@@ -23,6 +23,7 @@
         	<li> <a href="Products.html"> Products</a></li>
         	<li> <a href="Check out.html">Check out</a></li>
         	<li> <a href="Contact.html">Contact</a></li>
+            <li> <a href="Blog.html">Blog</a></li>
 		</ul>
 		</div>
 	</div> 
@@ -48,7 +49,7 @@ Staff will pick a collection based on stock available.
 </pre> 
 
                 </td>
-                <td>$15 </td>
+                <td style="font-weight: bold;">$15 </td>
             </tr>
             <tr>
                 <td><img src="./img/Cleansing bundle.png" alt="bowl containing Palo Santo, clear quartz, sage bundle, dried rose bud."></td>
@@ -64,7 +65,7 @@ Staff will pick a collection based on stock available.
 **Palo Santo is ethically sourced from South America
 </pre>              
                 </td>
-                <td>$40 </td>
+                <td style="font-weight: bold;">$40 </td>
 
             </tr>
             <tr>
@@ -76,8 +77,19 @@ Staff will pick a collection based on stock available.
                         Both of which were members of the Hermetic Order of the Golden Dawn. 
                         Frist published by the Rider Company in 1909 this deck has continued to be a stable for many in the spiritual world.</p>
                 </td>
-                <td>$40 </td>
-            </tr>       
+                <td style="font-weight: bold;">$40 </td>
+            </tr>    
+            <tr>
+                <td><img src="./img/Guide.png" alt="Women sitting with legs crossed meditation sunset backdrop"></td>
+                <td> 
+                    <h3>Spiritual Consult </h3>
+                    <P>Book a 1-hour video consult with our spiritual guides.<br> 
+                        Each Session is tailored to your needs and goals and are open to both beginners and advanced. 
+                    </P>
+                </td>
+                <td style="font-weight: bold;"> $120
+                </td>
+            </tr>   
         </table></div>
     
     </main>
