--- a/Sitemap.html
+++ b/Sitemap.html
@@ -15,6 +15,7 @@
         <li> <a href="Products.html"> Products</a></li>
         <li> <a href="Check out.html">Check out</a></li>
         <li> <a href="Contact.html">Contact</a></li>>
+        <li> <a href="Blog.html">Blog</a></li>
     </ul>
 <h3>Image Source</h3>
 
@@ -26,6 +27,10 @@
 <p>Image by <a href="https://unsplash.com/@earthtokarly">Karly Jones</a> on <a href="https://unsplash.com/">unsplash</a> </p>
 <img src="./img/Rider Waite Tarot Deck .png" alt="Rider waite tarot deck mid reading feminine hand holding the sun card">
 <p>Image by <a href="https://unsplash.com/@m_malkovich">Petr Sidorov</a> on <a href="https://unsplash.com/">unsplash</a></p>
+<img src="./img/cleansing.png" alt="polo santo cleansing">
+<p>Image by <a href="https://unsplash.com/@contentpixie">contentpixie</a>on <a href="https://unsplash.com/">unsplash</a> </p>
+<img src="./img/Guide.png" alt="Women sitting with legs crossed meditation sunset backdrop">
+<p>Image by <a href="https://unsplash.com/@jareddrice">Jared Rice</a> on <a href="https://unsplash.com/">unsplash</a> </p>
 
 <p>ICTWEB305 Assessment images </p>
 <img src="./img/Network image 1 - 300X300.png">
