--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         	<li> <a href="Products.html"> Products</a></li>
         	<li> <a href="Check out.html">Check out</a></li>
         	<li> <a href="Contact.html">Contact</a></li>
+			<li> <a href="Blog.html">Blog</a></li>
 		</ul>
 		</div>
 	</div> 
@@ -30,10 +31,18 @@
 <main>
 <section>
 <h2> Welcome </h2>
-<p> Welcome to everlasting chaos an intentional business for the spiritual. 
+
+<div style="display:inline-block;vertical-align:top;">
+   <p>
+    Welcome to everlasting chaos an intentional business for the spiritual. 
 	Please explore the site to find tools for your trade or reach out to us directly for advice. 
 	We cater to beginners, advances practitioners and all those in between.
-	</p>
+    </p>
+</div>
+<div style="display:inline-block;">
+    <img src="./img/cleansing.png" alt="polo santo cleansing">
+</div>
+
 </section>
 
 
